Fix links alignment in breadcrumb

--- a/Radzen.Blazor/themes/components/blazor/_breadcrumb.scss
+++ b/Radzen.Blazor/themes/components/blazor/_breadcrumb.scss
@@ -15,4 +15,8 @@
 .rz-breadcrumb-item {
     display: inline-flex;
     align-items: center;
+
+    .rz-link {
+        display: inline-flex;
+    }
 }
